# public/files/swagger/swagger.yaml
@@ -13,6 +13,8 @@ basePath: "/api/mobile/v1"
 tags:
   - name: "auth"
     description: "Authentication operations"
+  - name: "user"
+    description: "User operations"
 schemes:
   - "http"
 paths:
@@ -45,6 +47,23 @@ paths:
             "$ref": "#/definitions/ApiResponse"
         "401":
           description: "Failed operation"
+          schema:
+            "$ref": "#/definitions/ApiResponse"
+  /user/profile:
+    get:
+      tags:
+        - "user"
+      summary: "Get User Profile Details"
+      description: ""
+      operationId: "user-profile"
+      produces:
+        - "application/json"
+      parameters: []
+      security:
+        - JWT: []
+      responses:
+        "200":
+          description: "successful operation"
           schema:
             "$ref": "#/definitions/ApiResponse"
 definitions:
